working on meta and auto login support

--- a/avAdmin/login-controller/login-controller.html
+++ b/avAdmin/login-controller/login-controller.html
@@ -1,6 +1,6 @@
 <div av-admin-head nologin></div>
 
-<div av-login>
+<div av-login event-id="0">
 </div>
 
 <div av-admin-foot class="hidden-xs"></div>
