--- a/index.html
+++ b/index.html
@@ -128,6 +128,11 @@
   <script src="avRegistration/validate-controller/validate-controller.js" class="app"></script>
   <script src="avRegistration/validate-directive/validate-directive.js" class="app"></script>
   <script src="avRegistration/registration-service.js" class="app"></script>
+  <script src="avRegistration/field-directive/field-directive.js" class="app"></script>
+  <script src="avRegistration/fields/email-field-directive/email-field-directive.js" class="app"></script>
+  <script src="avRegistration/fields/password-field-directive/password-field-directive.js" class="app"></script>
+  <script src="avRegistration/fields/text-field-directive/text-field-directive.js" class="app"></script>
+  <script src="avRegistration/fields/code-field-directive/code-field-directive.js" class="app"></script>
 
   <!-- Admin -->
   <script src="avAdmin/init.js" class="app"></script>
