--- a/avRegistration/fields/text-field-directive/text-field-directive.html
+++ b/avRegistration/fields/text-field-directive/text-field-directive.html
@@ -12,7 +12,7 @@
             id="{{index}}Text"
             ng-model="field.value"
             ng-disabled="field.disabled"
-            tabindex="1"
+            tabindex="{{index+1}}"
             autofocus
             required />
         <div class="input-error">
