--- a/avRegistration/login-directive/login-directive.html
+++ b/avRegistration/login-directive/login-directive.html
@@ -14,8 +14,13 @@
               <div class="input-error">
                   <div class="error text-danger" ng-if="error">{{ error }}</div>
               </div>
-              <button type="submit" class="btn btn-block btn-success" ng-i18next="avRegistration.loginButton"
-                      ng-click="loginUser(form.$valid)" tabindex="3" ng-disabled="!form.$valid && !sendingData">
+              <button
+                type="submit"
+                class="btn btn-block btn-success"
+                ng-i18next="avRegistration.loginButton"
+                ng-click="loginUser(form.$valid)"
+                tabindex="{{login_fields.length+1}}"
+                ng-disabled="!form.$valid && !sendingData">
               </button>
           </div>
         </form>
