--- a/avRegistration/login-controller/login-controller.html
+++ b/avRegistration/login-controller/login-controller.html
@@ -1,2 +1,2 @@
-<div av-login event-id="{{event_id}}" code="{{code}}" user="{{user}}">
+<div av-login event-id="{{event_id}}" code="{{code}}" email="{{email}}">
 </div>
