--- a/avAdmin/admin-directives/dashboard/dashboard.html
+++ b/avAdmin/admin-directives/dashboard/dashboard.html
@@ -8,7 +8,7 @@
                 <i class="fa fa-sw fa-2x" ng-class="{true:'fa-check-circle', false:'fa-circle'}[index > $index]"></i>
             </div>
             <div class="small" ng-i18next ng-if="index != $index">{{ status }}</div>
-            <button class="btn btn-success" ng-if="index == $index">
+            <button ng-click="doAction($index)" class="btn btn-success" ng-if="index == $index">
                 <div class="small" ng-i18next>{{ nextaction }}</div>
                 <strong ng-i18next>avAdmin.dashboard.donow</strong>
             </button>
@@ -27,6 +27,9 @@
         <div class="col-sm-4 text-right">
             <div class="block">
                 <strong>{{ election.auth.census|number }}</strong><br/>
+                <button ng-click="sendAuthCodes(election)" class="btn btn-success">
+                    <i class="fa fa-sw fa-send"></i>
+                </button>
                 <span ng-i18next>avAdmin.dashboard.census</span>
             </div>
         </div>
