Ordering in election list and functional dashboard big button

--- a/avAdmin/admin-directives/dashboard/dashboard.html
+++ b/avAdmin/admin-directives/dashboard/dashboard.html
@@ -64,7 +64,7 @@
                 <a href="">Embed election</a>
             </div>
 
-            <button class="btn btn-block btn-lg btn-success" ng-if="nextaction" ng-i18next>{{ nextaction }}</button>
+            <button ng-click="doAction(index)" class="btn btn-block btn-lg btn-success" ng-if="nextaction" ng-i18next>{{ nextaction }}</button>
         </div>
         <!-- authorities -->
         <div class="col-md-6">
