adding simple two conditional questions view

--- a/avBooth/booth-directive/booth-directive.html
+++ b/avBooth/booth-directive/booth-directive.html
@@ -14,6 +14,8 @@
   </div>
   <div avb-pcandidates-election-screen ng-if="state == stateEnum.pcandidatesElectionScreen">
   </div>
+  <div avb-2questions-conditional-screen ng-if="state == stateEnum['2questionsConditionalScreen']">
+  </div>
   <div avb-cast-or-cancel-screen ng-if="state == stateEnum.castOrCancelScreen">
   </div>
   <div avb-audit-ballot-screen ng-if="state == stateEnum.auditBallotScreen">
