--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta charset="utf-8" />
-    <link href="themes/default/app.less" type="text/css" rel="stylesheet/less" />
+    <link href="themes/default/app.less" type="text/css" rel="stylesheet/less" id="themes" />
   </head>
 <body>
   <!-- Livereload script for development only (stripped during dist build) -->
@@ -82,6 +82,7 @@
 
   <script src="app.js" class="app"></script>
   <script src="avBooth/booth.js" class="app"></script>
+  <script src="avBooth/2questions-conditional-screen-directive/2questions-conditional-screen-directive.js" class="app"></script>
   <script src="avBooth/accordion-option-directive/accordion-option-directive.js" class="app"></script>
   <script src="avBooth/accordion-options-directive/accordion-options-directive.js" class="app"></script>
   <script src="avBooth/accordion-selected-option-directive/accordion-selected-option-directive.js" class="app"></script>
