Fixed tlf field and showed name of fields.

--- a/avRegistration/field-directive/field-directive.html
+++ b/avRegistration/field-directive/field-directive.html
@@ -3,4 +3,5 @@
   <div avr-password-field ng-switch-when="password"></div>
   <div avr-code-field ng-switch-when="code"></div>
   <div avr-text-field ng-switch-when="text"></div>
+  <div avr-text-field ng-switch-when="tlf"></div>
 </div>
