--- a/avRegistration/fields/text-field-directive/text-field-directive.html
+++ b/avRegistration/fields/text-field-directive/text-field-directive.html
@@ -1,8 +1,8 @@
 <div class="form-group">
     <label for="{{index}}Text" class="control-label col-sm-4">
-        <span>{{field.text}}</span>
+        <span>{{field.name}}</span>
         <p class="help-block" ng-if="field.help_text">
-          {{field.help_text}}
+          {{field.help}}
         </p>
     </label>
     <div class="col-sm-8">
