--- a/avAdmin/admin-sidebar-directive/admin-sidebar-directive.html
+++ b/avAdmin/admin-sidebar-directive/admin-sidebar-directive.html
@@ -10,13 +10,13 @@
   -->
 
   <ul class="nav nav-pills nav-stacked" ng-if="current">
-    <li role="presentation" class="head"><a ui-sref="admin.dashboard()">
+    <li role="presentation" class="head"><a ui-sref="admin.dashboard({id:current.id})">
         <span ng-i18next="avAdmin.sidebar.currentel"></span> <span class="label label-success">{{ current.title|truncate:20 }}</span></a></li>
     <li role="presentation" class="sub1" ng-class="{active:state=='admin.dashboard'}" ng-if="current.id">
-      <a ui-sref="admin.dashboard()"> <i class="fa-fw fa fa-dashboard"></i> <span ng-i18next="avAdmin.sidebar.dashboard"></span></a> </li>
+      <a ui-sref="admin.dashboard({id:current.id})"> <i class="fa-fw fa fa-dashboard"></i> <span ng-i18next="avAdmin.sidebar.dashboard"></span></a> </li>
 
     <li role="presentation" class="sub1" ng-class="{active:state == 'admin.'+l.name}" ng-repeat="l in sidebarlinks">
-      <a ui-sref="{{ 'admin.'+l.name+'()' }}">
+      <a ui-sref="{{ 'admin.'+l.name+'({id:current.id})' }}">
         <i class="fa-fw fa fa-{{ l.icon }}"></i>
         <span ng-i18next="avAdmin.sidebar.{{ l.name }}"></span>
       </a>
