--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
 
   <!-- admin directives -->
   <script src="avAdmin/admin-directives/elquestions/elquestions.js" class="app"></script>
+  <script src="avAdmin/admin-directives/question/question.js" class="app"></script>
   <script src="avAdmin/admin-directives/eltally/eltally.js" class="app"></script>
   <script src="avAdmin/admin-directives/elections/elections.js" class="app"></script>
   <script src="avAdmin/admin-directives/elcensus/elcensus.js" class="app"></script>
