adding initial borda support

--- a/avBooth/multi-question-directive/multi-question-directive.html
+++ b/avBooth/multi-question-directive/multi-question-directive.html
@@ -96,7 +96,8 @@
           layout="stateData.question.layout"
           max="stateData.question.max"
           min="stateData.question.min"
-          sorted="true"
+          sorted="stateData.sorted"
+          ordered="stateData.ordered"
           options="stateData.question.answers">
         </div>
       </div>
