--- a/avBooth/review-ballot-directive/review-ballot-directive.html
+++ b/avBooth/review-ballot-directive/review-ballot-directive.html
@@ -9,7 +9,18 @@
     </div>
   </h3>
   <p ng-i18next="[i18next]({num: (question.answers | avbSelectedOptions).length})avBooth.selectedOptionsFollow"></p>
-  <ul>
+  <ul ng-if="!mapQuestion(question).ordered">
+    <li
+      ng-repeat="answer in question.answers | avbSelectedOptions"
+      class="animate-repeat selected-answer">
+      {{answer.text}}
+    </li>
+    <li
+      ng-if="(question.answers | avbSelectedOptions).length == 0"
+      ng-i18next="avBooth.emptyAnswer">
+    </li>
+  </ul>
+  <ol ng-if="mapQuestion(question).ordered">
     <li
       ng-repeat="answer in question.answers | avbSelectedOptions"
       class="animate-repeat selected-answer">
