adding requested changes: removed totals and shuffling not grouped list

--- a/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.html
+++ b/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.html
@@ -91,10 +91,10 @@
         ng-class="{titleSelected: stateData.selectionDropDown}"
         ng-repeat="question in election.questions">
         {{question.title}}
-        <div
+        <!--<div
           class="title-help"
           ng-i18next="[i18next]({selected: numSelectedByQuestionIndex($index), count: numTotalByQuestionIndex($index)})avBooth.totalsQuestionColumn">
-        </div>
+        </div>-->
         <div
           class="randomize-column"
           ng-class="{hidden: stateData.selectionDropDown}"
