--- a/avAdmin/admin-directives/elcensus/elcensus.html
+++ b/avAdmin/admin-directives/elcensus/elcensus.html
@@ -1,3 +1,82 @@
 <div>
-    <h1>elcensus</h1>
+    <h2 ng-i18next>avAdmin.sidebar.census</h2>
+
+    <p class="text-muted" ng-i18next>avAdmin.census.intro</p>
+
+    <form role="form" class="form form-horizontal">
+        <!-- Registration -->
+        <div class="form-group">
+            <label class="col-sm-2" for="reg" ng-i18next="avAdmin.census.reg.label"></label>
+            <div class="col-sm-10">
+                <p class="text-muted" ng-i18next>
+                    avAdmin.census.reg.placeholder
+                </p>
+                <div class="radio" ng-repeat="o in census">
+                    <label>
+                        <input type="radio" name="reg" value="{{ o }}" ng-model="election.census.census"/>
+                        <span ng-i18next="avAdmin.census.census.{{ o }}"></span>
+                    </label>
+                </div>
+            </div>
+        </div>
+
+        <!-- extra fields -->
+        <div class="form-group">
+            <label class="col-sm-2" for="reg" ng-i18next="avAdmin.census.fields.label"></label>
+            <div class="col-sm-10">
+                <p class="text-muted" ng-i18next>
+                    avAdmin.census.fields.placeholder
+                </p>
+                <table class="table table-striped table-bordered">
+                    <tr>
+                        <th ng-i18next>avAdmin.census.name</th>
+                        <th ng-i18next>avAdmin.census.required</th>
+                        <th></th>
+                    </tr>
+                    <tr ng-repeat="ef in election.census.extra_fields">
+                        <td width="100%">{{ ef.name }}</td>
+                        <td><input type="checkbox" class="form-control" ng-model="ef.required"/></td>
+                        <td><i class="fa fa-times" ng-click="delEf($index)"></i></td>
+                    </tr>
+                </table>
+
+                <div class="input-group">
+                      <input type="text" class="form-control" placeholder="" ng-model="newef.name" ng-enter="addEf()"/>
+                      <span class="input-group-btn">
+                        <button class="btn btn-success" type="button" ng-click="addEf()" ng-i18next>avAdmin.census.add</button>
+                      </span>
+                </div><!-- /input-group -->
+
+            </div>
+        </div>
+    </form>
+
+    <h3 ng-i18next>avAdmin.census.manage</h3>
+
+    <table class="table table-bordered table-striped censustable">
+        <tr>
+            <th ng-repeat="(k, v) in election.census.voters.0">
+                {{ k }}
+            </th>
+            <th></th>
+        </tr>
+        <tr ng-repeat="c in election.census.voters">
+            <td ng-repeat="(k, v) in c">
+                {{ v }}
+            </td>
+            <td><i class="fa fa-times" ng-click="delVoter($index)"></i></td>
+        </tr>
+    </table>
+
+    <div class="well">
+        <form class="form">
+            <div class="form-group" ng-repeat="ef in election.census.extra_fields">
+                <input type="text" class="form-control" placeholder="{{ef.name}}" ng-model="newcensus[ef.name]"/>
+            </div>
+            <button class="btn btn-success" type="button" ng-click="addToCensus()" ng-i18next>avAdmin.census.add</button>
+        </form>
+    </div>
+
+    <button ng-click="saveCensus()" class="btn btn-block btn-success" ng-i18next>next</button>
+
 </div>
