Translated census text

--- a/avAdmin/admin-directives/elcensus/elcensus.html
+++ b/avAdmin/admin-directives/elcensus/elcensus.html
@@ -71,7 +71,7 @@
     <div class="well">
         <div class="row">
             <div class="col-sm-6">
-                <p class="text-muted"> Manual add </p>
+                <p class="text-muted" ng-i18next>avAdmin.census.manualAdd</p>
                 <form class="form">
                     <div class="form-group" ng-repeat="ef in election.census.extra_fields">
                         <input type="text" class="form-control" placeholder="{{ef.name}}" ng-model="newcensus[ef.name]"/>
@@ -80,16 +80,16 @@
                 </form>
             </div>
             <div class="col-sm-6">
-                <p class="text-muted"> CSV file, use semicolon to split fields. One voter per line </p>
+                <p class="text-muted" ng-i18next> avAdmin.census.massive1 </p>
                 <p class="text-muted">
-                    eg.
+                    <span ng-i18next>eg</span>
                     <span ng-repeat="ef in election.census.extra_fields">
                         {{ ef.name }}<span ng-if="!$last">;<span>
                     </span>
                 </p>
                 <form class="form">
                     <div class="form-group">
-                        <textarea class="form-control" placeholder="one voter per line, mantain the order" ng-model="massiveef"></textarea>
+                        <textarea class="form-control" ng-i18next="[placeholder]avAdmin.census.massive2" ng-model="massiveef"></textarea>
                     </div>
                     <button class="btn btn-success" type="button" ng-click="massiveAdd()" ng-i18next>avAdmin.census.add</button>
                 </form>
