--- a/avAdmin/admin-directives/elauth/elauth.html
+++ b/avAdmin/admin-directives/elauth/elauth.html
@@ -1,3 +1,46 @@
 <div>
-    <h1>elauth</h1>
+    <h2 ng-i18next>avAdmin.sidebar.auth</h2>
+
+    <form class="form form-horizontal" role="form">
+        <!-- Auth method -->
+        <div class="form-group">
+            <label class="col-sm-2" for="auth" ng-i18next="avAdmin.auth.auth"></label>
+            <div class="col-sm-10">
+                <div class="radio" ng-repeat="a in auth">
+                    <label>
+                        <input type="radio" name="auth" value="{{ a }}" ng-model="election.census.auth_method"/>
+                        <span ng-i18next="avAdmin.auth.auths.{{ a }}"></span>
+                    </label>
+                </div>
+            </div>
+        </div>
+
+        <!-- SMS conf -->
+        <div class="well" ng-if="election.census.auth_method == 'sms'">
+            <div class="form-group">
+                <label class="col-sm-2" ng-i18next="avAdmin.auth.sms"></label>
+                <div class="col-sm-10">
+                    <p class="text-muted" ng-i18next> avAdmin.auth.smstemp </p>
+                    <textarea class="form-control" ng-model="election.census.config.msg"></textarea>
+                </div>
+            </div>
+        </div>
+
+        <!-- Email conf -->
+        <div class="well" ng-if="election.census.auth_method == 'email'">
+            <div class="form-group">
+                <label class="col-sm-2" ng-i18next="avAdmin.auth.emailsub"></label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" ng-model="election.census.config.subject"/>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2" ng-i18next="avAdmin.auth.email"></label>
+                <div class="col-sm-10">
+                    <p class="text-muted" ng-i18next> avAdmin.auth.emailtemp </p>
+                    <textarea class="form-control" ng-model="election.census.config.msg"></textarea>
+                </div>
+            </div>
+        </div>
+    </form>
 </div>
