--- a/avRegistration/register-directive/register-directive.html
+++ b/avRegistration/register-directive/register-directive.html
@@ -1,26 +1,36 @@
-<div class="container">
-  <div class="row">
-    <div class="col-xs-offset-4 col-xs-4">
-    <h1 class="text-center">{{name}}</h1>
-    <h1 ng-i18next="avRegistration.registerHeader" class="text-center"></h1>
-    <form name="form" role="form">
-      <div id="signupForm" class="form-horizontal">
-        <div ng-repeat="field in metadata.fieldsRegister">
-          <div class="form-group">
-              <ng-form name="subForm">
-                <input name="input" type="{{field.type}}" class="form-control" ng-model="register[field.name]"
-                     ng-i18next="[placeholder]avRegistration.{{field.name}}Placeholder"
-                     ng-required={{field.required}} ng-pattern="patterns( field.name )" />
-                <div class="error" ng-show="subForm.input.$dirty && subForm.input.$invalid">
-                    <small class="error" ng-i18next="avRegistration.{{field.name}}Error"></small>
-                </div>
-              </ng-form>
-          </div>
-        </div>
-      </div>
+<div class="container"> <div class="row">
+    <div class="col-sm-12 registerheader">
+        <h1>{{name}}</h1>
+        <h1 ng-i18next="avRegistration.registerHeader"></h1>
+    </div>
 
-      <button type="submit" class="btn btn-block" ng-i18next="avRegistration.registerButton" ng-click="signUp(form.$valid)">
-      </button>
-    </form>
+    <div class="col-sm-6">
+        <form name="form" id="registerForm" role="form" class="form-horizontal">
+            <div ng-repeat="field in register_fields" avr-field index="{{$index}}">
+            </div>
+
+          <div class="col-sm-offset-4 col-sm-8 button-group">
+              <div class="input-error">
+                  <div class="error text-danger" ng-if="error">{{ error }}</div>
+              </div>
+              <button
+                type="submit"
+                class="btn btn-block btn-success"
+                ng-i18next="avRegistration.registerButton"
+                ng-click="signUp(form.$valid)"
+                tabindex="{{register_fields.length+1}}"
+                ng-disabled="!form.$valid && !sendingData">
+              </button>
+          </div>
+        </form>
+    </div>
+    <div class="col-sm-5 col-sm-offset-1 hidden-xs">
+      <p>
+        <span ng-i18next="avRegistration.createElection"></span><br/>
+        <span ng-i18next="avRegistration.takeLook"></span>
+        <a href="" target="_blank" ng-i18next="avRegistration.step"></a>
+      </p>
+    </div>
   </div>
 </div>
+
