admin: Creating election form working

--- a/avAdmin/admin-controller/admin-controller.html
+++ b/avAdmin/admin-controller/admin-controller.html
@@ -13,6 +13,7 @@
             <div av-admin-elcensus ng-switch-when="admin.census"></div>
             <div av-admin-elauth ng-switch-when="admin.auth"></div>
             <div av-admin-eltally ng-switch-when="admin.tally"></div>
+            <div av-admin-create ng-switch-when="admin.create"></div>
             <div av-admin-dashboard ng-switch-when="admin.dashboard"></div>
             <div av-admin-account ng-switch-when="admin.account"></div>
             <div av-admin-billinginfo ng-switch-when="admin.billinfo"></div>
