--- a/avAdmin/admin-directives/elauth/elauth.html
+++ b/avAdmin/admin-directives/elauth/elauth.html
@@ -43,4 +43,6 @@
             </div>
         </div>
     </form>
+
+    <button ui-sref="admin.create()" ng-if="!election.id" class="btn btn-block btn-success" ng-i18next>next</button>
 </div>
