--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
   <script src="avAdmin/admin-directives/elquestions/elquestions.js" class="app"></script>
   <script src="avAdmin/admin-directives/question/question.js" class="app"></script>
   <script src="avAdmin/admin-directives/eltally/eltally.js" class="app"></script>
+  <script src="avAdmin/admin-directives/create/create.js" class="app"></script>
   <script src="avAdmin/admin-directives/elections/elections.js" class="app"></script>
   <script src="avAdmin/admin-directives/elcensus/elcensus.js" class="app"></script>
   <script src="avAdmin/admin-directives/dashboard/dashboard.js" class="app"></script>
