avRegistration: added int, bool and tel types when use extra_fields.

--- a/index.html
+++ b/index.html
@@ -134,6 +134,9 @@
   <script src="avRegistration/fields/password-field-directive/password-field-directive.js" class="app"></script>
   <script src="avRegistration/fields/text-field-directive/text-field-directive.js" class="app"></script>
   <script src="avRegistration/fields/code-field-directive/code-field-directive.js" class="app"></script>
+  <script src="avRegistration/fields/tel-field-directive/tel-field-directive.js" class="app"></script>
+  <script src="avRegistration/fields/bool-field-directive/bool-field-directive.js" class="app"></script>
+  <script src="avRegistration/fields/int-field-directive/int-field-directive.js" class="app"></script>
 
   <!-- Admin -->
   <script src="avAdmin/init.js" class="app"></script>
