Fixed help in field of text type.

--- a/avRegistration/fields/text-field-directive/text-field-directive.html
+++ b/avRegistration/fields/text-field-directive/text-field-directive.html
@@ -1,7 +1,7 @@
 <div class="form-group">
     <label for="{{index}}Text" class="control-label col-sm-4">
         <span>{{field.name}}</span>
-        <p class="help-block" ng-if="field.help_text">
+        <p class="help-block" ng-if="field.help">
           {{field.help}}
         </p>
     </label>
