--- a/avRegistration/fields/password-field-directive/password-field-directive.html
+++ b/avRegistration/fields/password-field-directive/password-field-directive.html
@@ -2,12 +2,12 @@
     <label for="passwordText" class="control-label col-sm-4">
         <span ng-i18next="avRegistration.passwordLabel"></span>
         <p class="help-block">
-          <a href="#" ng-i18next="avRegistration.forgotPassword" ng-click="forgotPassword()" tabindex="5"></a>
+          <a href="#" ng-i18next="avRegistration.forgotPassword" ng-click="forgotPassword()" tabindex="{{index+1}}"></a>
         </p>
     </label>
     <div class="col-sm-8">
         <input type="password" class="form-control" ng-model="field.value" id="passwordText"  ng-disabled="field.disabled"
-                ng-i18next="[placeholder]avRegistration.passwordPlaceholder" tabindex="2" required />
+                ng-i18next="[placeholder]avRegistration.passwordPlaceholder" tabindex="{{index}}" required />
         <div class="input-error">
             <small
               class="error text-danger"
