Checked min, max and required values from extra_fields in avRegistration.

--- a/avRegistration/fields/bool-field-directive/bool-field-directive.html
+++ b/avRegistration/fields/bool-field-directive/bool-field-directive.html
@@ -14,7 +14,7 @@
             ng-disabled="field.disabled"
             tabindex="{{index}}"
             autofocus
-            required />
+            ng-required={{field.required}} />
         <div class="input-error">
         </div>
     </div>
