--- a/avRegistration/fields/int-field-directive/int-field-directive.html
+++ b/avRegistration/fields/int-field-directive/int-field-directive.html
@@ -10,11 +10,13 @@
             type="number"
             class="form-control"
             id="{{index}}Text"
+            min={{field.min}}
+            max={{field.max}}
             ng-model="field.value"
             ng-disabled="field.disabled"
             tabindex="{{index}}"
             autofocus
-            required />
+            ng-required={{field.required}} />
         <div class="input-error">
         </div>
     </div>
