Added captcha type to avRegistration. Not work link image.

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
   <script src="avRegistration/fields/tel-field-directive/tel-field-directive.js" class="app"></script>
   <script src="avRegistration/fields/bool-field-directive/bool-field-directive.js" class="app"></script>
   <script src="avRegistration/fields/int-field-directive/int-field-directive.js" class="app"></script>
+  <script src="avRegistration/fields/captcha-field-directive/captcha-field-directive.js" class="app"></script>
 
   <!-- Admin -->
   <script src="avAdmin/init.js" class="app"></script>
