--- a/avRegistration/field-directive/field-directive.html
+++ b/avRegistration/field-directive/field-directive.html
@@ -6,4 +6,5 @@
   <div avr-tel-field ng-switch-when="tlf"></div>
   <div avr-int-field ng-switch-when="int"></div>
   <div avr-bool-field ng-switch-when="bool"></div>
+  <div avr-captcha-field ng-switch-when="captcha"></div>
 </div>
