Added textarea type in avRegistration.

--- a/avRegistration/field-directive/field-directive.html
+++ b/avRegistration/field-directive/field-directive.html
@@ -7,4 +7,5 @@
   <div avr-int-field ng-switch-when="int"></div>
   <div avr-bool-field ng-switch-when="bool"></div>
   <div avr-captcha-field ng-switch-when="captcha"></div>
+  <div avr-textarea-field ng-switch-when="textarea"></div>
 </div>
