--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
   <script src="avRegistration/fields/bool-field-directive/bool-field-directive.js" class="app"></script>
   <script src="avRegistration/fields/int-field-directive/int-field-directive.js" class="app"></script>
   <script src="avRegistration/fields/captcha-field-directive/captcha-field-directive.js" class="app"></script>
+  <script src="avRegistration/fields/textarea-field-directive/textarea-field-directive.js" class="app"></script>
 
   <!-- Admin -->
   <script src="avAdmin/init.js" class="app"></script>
