starting work on public election view

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
   <script src="avUi/avUi.js" class="app"></script>
   <script src="avUi/jquery.flash.js" class="app"></script>
   <script src="avUi/simple-error-directive/simple-error-directive.js" class="app"></script>
+  <script src="avUi/change-lang-directive/change-lang-directive.js" class="app"></script>
   <script src="avUi/affix-bottom-directive.js" class="app"></script>
   <script src="avUi/affix-top-offset-directive.js" class="app"></script>
   <script src="avUi/affix-top-directive.js" class="app"></script>
@@ -118,6 +119,8 @@
   <script src="avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.js" class="app"></script>
   <script src="avElection/question-results-directive/question-results-directive.js" class="app"></script>
   <script src="avElection/verify-results-directive/verify-results-directive.js" class="app"></script>
+  <script src="avElection/public-controller/public-controller.js" class="app"></script>
+  <script src="avElection/layouts/default-election-directive/default-election-directive.js" class="app"></script>
 
   <!-- registration -->
   <script src="avRegistration/init.js" class="app"></script>
