--- a/avAdmin/admin-head-directive/admin-head-directive.html
+++ b/avAdmin/admin-head-directive/admin-head-directive.html
@@ -25,15 +25,7 @@
             <li ng-if="admin"><a ui-sref="registration.logout()"><i class="fa fa-user"></i> {{ admin }}</a></li>
             <li ng-if="admin"><a ui-sref="registration.logout()"><i class="fa fa-power-off"></i></a></li>
 
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-              {{ deflang }}
-              <span class="caret"></span></a>
-              <ul class="dropdown-menu" role="menu">
-                <li><a ng-click="changeLang('en')">en</a></li>
-                <li><a  ng-click="changeLang('es')">es</a></li>
-              </ul>
-            </li>
+            <li class="dropdown" av-change-lang></li>
           </ul>
         </div><!-- /.navbar-collapse -->
     </div>
