first version of public election view

--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
   <script src="avElection/verify-results-directive/verify-results-directive.js" class="app"></script>
   <script src="avElection/public-controller/public-controller.js" class="app"></script>
   <script src="avElection/layouts/default-election-directive/default-election-directive.js" class="app"></script>
+  <script src="avElection/layouts/question-info-directive/question-info-directive.js" class="app"></script>
+  <script src="avElection/layouts/simple-question-directive/simple-question-directive.js" class="app"></script>
 
   <!-- registration -->
   <script src="avRegistration/init.js" class="app"></script>
